chore: updates api.yaml for refined compliance attributes
